# pancake

./: .gitignore  CRITICAL_REVIEW_REVISED.md  DEMO_FINAL_STATUS.md  DPI_Agriculture.txt  Dockerfile  EXECUTIVE_SUMMARY.md  FOLDER_STRUCTURE.md  GOVERNANCE.md  IMPLEMENTATION.md  MEAL_IMPLEMENTATION_COMPLETE.md  MOBILE_MEAL_SPEC.md  MOTIVATION.md  PANCAKE.md  PANCAKE_WHITEPAPER_DPI.md  PGVECTOR_SUCCESS.md  PHASE_2_PLAN.md  POC_Nov20_BITE_PANCAKE.ipynb  POC_README.md  README.md  ROADMAP.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  SIRUP.md  TAP.md  TAP_VENDOR_GUIDE.md  app.py  config.py  fix_all_tap_paths.py  fix_function_name.py  future_todo.md  meal.py  requirements.txt  requirements_poc.txt  setup_postgres.sh  tap_adapter_base.py  tap_adapters.py  tap_vendors.yaml  testing_EUDR.md  testing_food_safety.md  testops_prompt.md
.audit/: GUARDRAILS.md  (+4 more)
services/: .env.example  Dockerfile  README.md  docker-compose.yml  export_openapi.py  openapi.json  pyproject.toml  requirements.txt
services/demo/: end_to_end_demo.py
services/pancake_services/: __init__.py
services/pancake_services/common/: config.py  db.py
services/pancake_services/grants/: app.py  auth.py  issuer.py  mealstore.py  merkle.py  models.py  schemas.py  sdjwt.py  statuslist.py  statuslist_service.py
services/specs/: CREDENTIAL_PROFILE.md  MERKLE_LISTID.md
services/tests/: conftest.py  test_auth.py  test_bite_store.py  test_bites_grant_gate.py  test_fieldlists.py  test_grants.py  test_meal_audit.py  test_merkle.py  test_sdjwt.py  test_statuslist.py  test_tap_runtime.py  test_tap_weather.py  test_testkit.py
(+119 files in other folders)
